// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test entreprise search correct siren 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "idcc": 9999,
      "shortTitle": "",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 36,
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Traitement de données, hébergement et activités connexes",
  "address": "107 Rue Servient 69003 Lyon",
  "convention": Object {
    "etat": "VIGUEUR_ETEN",
    "id": "KALICONT000005635597",
    "idcc": 45,
    "mtime": 1562873918,
    "shortTitle": "Caoutchouc",
    "texte_de_base": "KALITEXT000005673838",
    "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
    "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
  },
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 1,
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
  "siret": "85520050703169",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ <b><u>MICHELIN</b></u>",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 20,
  "matchingEtablissement": Object {
    "address": "Rue de Charlieu 42300 Roanne",
    "siret": "85520050701445",
  },
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;
